@startuml

title __METHODS's Class Diagram__\n

  namespace sample {
    namespace Methods {
      class sample.Methods.DataArea {
          + draw()
          + getModuleName()
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.Library {
          + draw()
          + getModuleName()
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.Modulus {
          + draw()
          + getModuleName()
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      abstract class sample.Methods.Shape {
          + type : String
          + clone()
          {abstract} + draw()
          {abstract} + getModuleName()
          + toString()
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.Subsystem {
          + draw()
          + getModuleName()
      }
    }
  }
  

  sample.Methods.DataArea -up-|> sample.Methods.Shape
  sample.Methods.Library -up-|> sample.Methods.Shape
  sample.Methods.Modulus -up-|> sample.Methods.Shape
  sample.Methods.Shape .up.|> java.lang.Cloneable
  sample.Methods.Subsystem -up-|> sample.Methods.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
